--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h3>Corey Ratcliffe's Site</h3>
+<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
+<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
 </body>
 </html>
