Index.html edit

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h3>Corey Ratcliffe's Site</h3>
 <p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
 <p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
+<p>Please excuse the history of my commits, I'm still learning!</p>
 </body>
 </html>
