--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
 <html>
 <body>
 <h3>Corey Ratcliffe's Site</h3>
