--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
 <html>
 <body>
-<h3>Corey Ratcliffe's Site</h3>
-<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
-<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
-<p>Please excuse the history of my commits, I'm still learning!</p>
+<div class="header">
+	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" />
+	<h3>Corey Ratcliffe's Site</h3>
+</div>
+	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
+	<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
+	<p>Please excuse the history of my commits, I'm still learning!</p>
 </body>
 </html>
