--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <div class="header">
 	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" />
-	<h3>Corey Ratcliffe's Site</h3>
+	<div class="main_title">Corey Ratcliffe's Site</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
 	<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
