--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <body>
 <div class="header">
-	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" style="object-fit: contain; width: 100%;"/>
-	<div class="main_title">Corey Ratcliffe's Site 2</div>
+	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" style="object-fit: cover; height: auto; width: 100%;"/>
+	<div class="main_title">Corey Ratcliffe's Site</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
 	<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
