--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 <div class="header">
-	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" style="object-fit: contain;"/>
+	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" style="object-fit: cover;"/>
 	<div class="main_title">Corey Ratcliffe's Site</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
