header reformat to hero-image

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
 <html>
 <body>
-<div class="header">
-	<img src="img\Header_Brain_Cropped.jpg" alt="header_image" style="object-fit: cover"/>
-	<div class="main_title">Corey Ratcliffe's Site</div>
+<div class="hero_image">
+	<div class="hero_text">
+		<h3>Corey Ratcliffe's Site</h3>
+	</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
 	<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
