--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<h3>Corey Ratcliffe's Site</h3>
 	</div>
 </div>
-	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.</p>
-	<p>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.</p>
-	<p>Please excuse the history of my commits, I'm still learning!</p>
+	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
+	My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.
+	Please excuse the history of my commits, I'm still learning!</p>
 </body>
 </html>
