--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
-	My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.
-	Please excuse the history of my commits, I'm still learning!</p>
+		<br/>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.
+		<br/>Please excuse the history of my commits, I'm still learning!</p>
 </body>
 </html>
