--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
 		<br/>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.
-		<br/>Please excuse the history of my commits, I'm still learning!</p>
+		<br/>Pl-ease excuse the commit history, this is a work in progress.</p>
 </body>
 </html>
