hero image and text

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <body>
 <div class="hero_image">
 	<div class="hero_text">
-		<h3>Corey Ratcliffe's Site</h3>
+		<h3>CR's Public Repository</h3>
+	</div>
+	<div class="hero_subtext">
+		<h3>A collection of notes, links, information, and resources you might find useful</h3>
 	</div>
 </div>
 	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
-		<br/>My research has focused on imaging the networks in Epilepsy and Neurocysticercosis.
+		<br/>My research has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
 		<br/>Please excuse the commit history, this is a work in progress.</p>
 </body>
 </html>
