--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<h3>A collection of notes, links, information, and resources you might find useful</h3>
 	</div>
 </div>
-	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
+	<p>Included on this site is:</p>
+	<p1>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
 		<br/>My research has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
 		<br/>Please excuse the commit history, this is a work in progress.</p>
 </body>
