--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 	<p>Included on this site is:</p>
 	<p1>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
 		<br/>My research has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
-		<br/>Please excuse the commit history, this is a work in progress.</p>
+		<br/>Please excuse the commit history, this is a work in progress.</p1>
 </body>
 </html>
