--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 <div class="hero_image">
 	<div class="hero_text">
-		<h3>CR's Public Repository</h3>
+		<p>CR's Public Repository</p>
 	</div>
 	<div class="hero_subtext">
-		<h3>A collection of notes, links, information, and resources you might find useful</h3>
+		<p>A collection of notes, links, information, and resources you might find useful</p>
 	</div>
 </div>
 	<p>Included on this site is:</p>
