formatting of sections

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body>
 <div class="hero_image">
 	<div class="hero_text">
-		<p>CR's Public Repository</p>
+		<h1>CR's Public Repository</h1>
 	</div>
 	<div class="hero_subtext">
-		<p>A collection of notes, links, information, and resources you might find useful</p>
+		<h2>A collection of notes, links, information, and resources you might find useful</h1>
 	</div>
 </div>
-	<p>Included on this site is:</p>
-	<p1>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
+	<h3>Included on this site is:</h3>
+	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
 		<br/>My research has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
-		<br/>Please excuse the commit history, this is a work in progress.</p1>
+		<br/>Please excuse the commit history, this is a work in progress.</p>
 </body>
 </html>
