--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	</div>
 </div>
 	<h3>Included on this site is:</h3>
-	<p>This is the home page for my site, dedicated to the work I have done since starting my PhD in neuroimaging.
-		<br/>My research has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
+	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging.
+		<br/>Which has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
+		<br/>
 		<br/>Please excuse the commit history, this is a work in progress.</p>
 </body>
 </html>
