--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<h1>CR's Public Repository</h1>
 	</div>
 	<div class="hero_subtext">
-		<h2>A collection of notes, links, information, and resources you might find useful</h2>
+		<h2>Notes, links, information, and resources you might find useful</h2>
 	</div>
 </div>
 	<h3>Included on this site is:</h3>
-	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging.
+	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging,
 		<br/>Which has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
 		<br/>
 		<br/>Please excuse the commit history, this is a work in progress.</p>
