--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 	<h3>Included on this site is:</h3>
 	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging,
-		<br/>Which has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
+		<br/>which has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
 		<br/>
 		<br/>Please excuse the commit history, this is a work in progress.</p>
 </body>
