--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 		<h2>Notes, links, information, and resources you might find useful</h2>
 	</div>
 </div>
+<div class="welcome_p">
 	<h3>Included on this site is:</h3>
 	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis.
 		<br/>
 		<br/>Please excuse the commit history, this is a work in progress.</p>
+</div>
 </body>
 </html>
