--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
     <br/>Links to online resources
     <br/>Supporting information for presentations and posters</p>
 </div>
+<div class="footer_p">
+	<p2>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
+	<br/>
+	<br/>Please excuse the commit history, this is a work in progress.
+    <br/>
+    <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
+    <br/>A book and music journal
+    <br/>Links to online resources
+    <br/>Supporting information for presentations and posters</p2>
+</div>
 </body>
 </html>
