--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </div>
 <div class="footer_p">
 	<p2>All opinions presented are solely mine
-    <p2>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
+    <br/>
+    <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2
 </div>
 </body>
 </html>
