--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="footer_p">
 	<p2>All opinions presented are solely mine
     <br/>
-    <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2
+    <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
 </div>
 </body>
 </html>
