--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
 <link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
 <html>
 <body>
-<div class="hero_image">
-	<div class="hero_text">
-		<h1>CR's Public Repository</h1>
-	</div>
-	<div class="hero_subtext">
-		<h2>Notes, links, information, and resources you might find useful</h2>
-	</div>
-</div>
-<div class="welcome_p">
-	<h3>Included on this site is:</h3>
-	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
-	<br/>
-	<br/>Please excuse the commit history, this is a work in progress.
-    <br/>
-    <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
-    <br/>
-    <br/>A book and music journal
-    <br/>
-    <br/>Links to online resources
-    <br/>
-    <br/>Supporting information for presentations and posters</p>
-</div>
-<div class="footer_p">
-	<p2>All opinions presented are solely mine
-    <br/>
-    <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
-</div>
+    <div id="page-container">
+        <div id="content-wrap">
+            <div class="hero_image">
+            	<div class="hero_text">
+            		<h1>CR's Public Repository</h1>
+            	</div>
+            	<div class="hero_subtext">
+            		<h2>Notes, links, information, and resources you might find useful</h2>
+            	</div>
+            </div>
+            <div class="welcome_p">
+            	<h3>Included on this site is:</h3>
+            	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
+            	<br/>
+            	<br/>Please excuse the commit history, this is a work in progress.
+                <br/>
+                <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
+                <br/>
+                <br/>A book and music journal
+                <br/>
+                <br/>Links to online resources
+                <br/>
+                <br/>Supporting information for presentations and posters</p>
+            </div>
+        </div>
+        <footer id="footer">
+            <p2>All opinions presented are solely mine
+            <br/>
+            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
+        </footer>
+    </div>
 </body>
+
 </html>
