--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <footer id="footer">
             <p2>All opinions presented are solely mine
             <br/>
-            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2></footer>
+            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
+        </footer>
     </div>
 </body>
 
