--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             	<h3>Included on this site is:</h3>
             	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
             	<br/>
-            	<br/>Please excuse the commit history, this is a work in progress.
+            	<br/>Please excuse the commit history, this is a work in progress
                 <br/>
                 <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
                 <br/>
