--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
                 <br/>Supporting information for presentations and posters</p>
             </div>
         </div>
-        <footer id="footer">
-            <p2>All opinions presented are solely mine
-            <br/>
-            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
+        <footer class="footer">
+            <p2>All opinions presented are solely mine</p2>
+            <p2>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
         </footer>
     </div>
 </body>
