--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
         </div>
         <footer class="footer">
-            <p2>All opinions presented are solely mine</p2>
-            <p2>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
+            <p2>All opinions presented are solely mine
+            <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold</p2>
         </footer>
     </div>
 </body>
