--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
             <div class="welcome_p">
             	<h3>Included on this site is:</h3>
             	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
-            	<br/>
-            	<br/>Please excuse the commit history, this is a work in progress
                 <br/>
                 <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
                 <br/>
@@ -27,7 +25,9 @@
                 <br/>
                 <br/>Links to online resources
                 <br/>
-                <br/>Supporting information for presentations and posters</p>
+                <br/>Supporting information for presentations and posters
+                <br/>
+                <br/>Please excuse the commit history, this is a work in progress</p>
             </div>
         </div>
         <footer class="footer">
