--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p2>All opinions presented are solely mine
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:</p2>
-            <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
+            <a href2="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
         </footer>
     </div>
 </body>
