--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" type="text/css" href="https://c-ratcliffe.github.io/style.css">
 <html>
 <body>
-    <div class="page-container">
-        <div class="content-wrap">
+    <div id="page-container">
+        <div id="content-wrap">
             <div class="hero_image">
             	<div class="hero_text">
             		<h1>CR's Public Repository</h1>
