--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <br/>Please excuse the commit history, this is a work in progress</p>
             </div>
         </div>
-        <footer class="footer">
+        <footer id="footer">
             <p2>All opinions presented are solely mine
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:</p2>
