--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body>
     <div id="page-container">
         <div id="content-wrap">
-            <div class="hero_image">
-            	<div class="hero_text">
+            <div id="hero_image">
+            	<div id="hero_text">
             		<h1>CR's Public Repository</h1>
             	</div>
-            	<div class="hero_subtext">
+            	<div id="hero_subtext">
             		<h2>Notes, links, information, and resources you might find useful</h2>
             	</div>
             </div>
-            <div class="welcome_p">
+            <div id="welcome_p">
             	<h3>Included on this site is:</h3>
             	<p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
                 <br/>
