--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="welcome_p">
             	<h3>Included on this site is:</h3>
-            	<p id ="bodytext"><p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
+            	<p class="bodytext"><p>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
                 <br/>
                 <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
                 <br/>
@@ -31,7 +31,7 @@
             </div>
         </div>
         <footer id="footer">
-            <p id="footertext"><p>All opinions presented are solely mine
+            <p class="footertext"><p>All opinions presented are solely mine
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:</p>
             <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
