--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <footer id="footer">
             <p class="footertext">All opinions presented are solely mine
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
-            <br/>Contact:</p>
-            <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a>
+            <br/>Contact:
+            <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
     </div>
 </body>
