--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             		<h2>Notes, links, information, and resources you might find useful</h2>
             	</div>
             </div>
-            <div id="welcome_p">
+            <div id="intro">
             	<h3>Included on this site is:</h3>
             	<p class="bodytext">An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
                 <br/>
