--- a/software.html
+++ b/software.html
@@ -19,7 +19,7 @@ permalink: /https://c-ratcliffe.github.io/software
             </div>
         </div>
         <div id="content-wrap">
-        	<h3>Included on this site is:</h3>
+        	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
         	<p class="bodytext">Atom Editor - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]
             <br/>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]
             <br/>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux
