--- a/software.html
+++ b/software.html
@@ -18,7 +18,7 @@
         	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
         	<p class="bodytext">Atom Editor - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]
             <br/>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]
-            <br/><p class="tab">Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</p>
+            <li>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
             <br/>Brave Browser - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]
             <br/>Calibre - E-Book library manager, exporter, and reader [Linux, Mac, Windows]
             <br/>Deluge - Fast and safe torrent client [Linux, Mac, Windows]
@@ -43,7 +43,7 @@
             <br/>Zotero - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</p>
         </div>
         <footer id="footer">
-            <p class="footertext">All opinions presented are solely mine
+            <p class="footertext">All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
