--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br/>Please excuse the commit history, this is a work in progress</p>
         </div>
         <footer id="footer">
-            <p class="footertext">All opinions presented are solely mine
+            <p class="footertext">All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
             <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
