--- a/software.html
+++ b/software.html
@@ -16,31 +16,33 @@
         </div>
         <div id="content-wrap">
         	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
-        	<p class="bodytext">Atom Editor - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]
-            <br/>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]
-            <ul>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</ul>
-            <br/>Brave Browser - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]
-            <br/>Calibre - E-Book library manager, exporter, and reader [Linux, Mac, Windows]
-            <br/>Deluge - Fast and safe torrent client [Linux, Mac, Windows]
-            <br/>Equalizer APO - Audio processing software, functions as a systemwide EQ [Windows]
-            <br/>Peace Equalizer - Highly recommended interface for Equalizer APO
-            <br/>Evince PDF reader - Lightweight, but powerful, document viewer [Linux] 
-            <br/>Foxit Reader - Powerful and free document viewer [Linux, Mac, Windows]
-            <br/>Lacks some features on Linux
-            <br/>Advertisements can easily be disabled in the preferences
-            <br/>GIMP - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]
-            <br/>Inkscape - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]
-            <br/>Krita - Feature-heavy painting and drawing program [Linux, Mac, Windows]
-            <br/>Musicbee - Highly customisable music library manager, exporter, and player [Windows]
-            <br/>AudioBand - A proxy audio controller for Spotify, iTunes, or MusicBee [Windows]
-            <br/>Notepad++ - A simple text editor, with comprehensive and easy to use preferences [Windows]
-            <br/>Openshot - Powerful video editing software [Linux, Mac, Windows]
-            <br/>Scribus - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]
-            <br/>TiddlyWiki - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary
-            <br/>TiddlyDesktop - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]
-            <br/>AndTidWiki - A standalone html viewing tool, optimised for TiddlyWiki [Android]
-            <br/>VLC - Powerful multimedia player [Linux, Mac, Windows]
-            <br/>Zotero - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</p>
+        	<ul>
+                <li>Atom Editor - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
+                <li>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
+                <li>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
+                <li>Brave Browser - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
+                <li>Calibre - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
+                <li>Deluge - Fast and safe torrent client [Linux, Mac, Windows]</li>
+                <li>Equalizer APO - Audio processing software, functions as a systemwide EQ [Windows]</li>
+                <li>Peace Equalizer - Highly recommended interface for Equalizer APO
+                <li>Evince PDF reader - Lightweight, but powerful, document viewer [Linux]</li>
+                <li>Foxit Reader - Powerful and free document viewer [Linux, Mac, Windows]</li>
+                <li>Lacks some features on Linux</li>
+                <li>Advertisements can easily be disabled in the preferences</li>
+                <li>GIMP - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
+                <li>Inkscape - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
+                <li>Krita - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
+                <li>Musicbee - Highly customisable music library manager, exporter, and player [Windows]</li>
+                <li>AudioBand - A proxy audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
+                <li>Notepad++ - A simple text editor, with comprehensive and easy to use preferences [Windows]</li>
+                <li>Openshot - Powerful video editing software [Linux, Mac, Windows]</li>
+                <li>Scribus - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
+                <li>TiddlyWiki - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
+                <li>TiddlyDesktop - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
+                <li>AndTidWiki - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
+                <li>VLC - Powerful multimedia player [Linux, Mac, Windows]</li>
+                <li>Zotero - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
+            </ul>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
