--- a/software.html
+++ b/software.html
@@ -17,8 +17,8 @@
         <div id="content-wrap">
         	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
         	<ul>
-                <li>Atom Editor - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
-                <li>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
+                <li><a href="https://atom.io">Atom Editor</a>- Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
+                <li>Audacity - Multi-track audio<a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a> editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
                 <ul>
                     <li>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
                 </ul>
