--- a/index.html
+++ b/index.html
@@ -16,23 +16,20 @@
         </div>
         <div id="content-wrap">
         	<h3>Included on this site is:</h3>
-        	<p class="bodytext">An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis
-            <br/>
-            <br/>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android
-            <br/>
-            <br/>A book and music journal
-            <br/>
-            <br/>Links to online resources
-            <br/>
-            <br/>Supporting information for presentations and posters
-            <br/>
-            <br/>Please excuse the commit history, this is a work in progress</p>
+        	<ul>
+                <li>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
+                <li>A list of recommended software for a wide variety of functions, on Windows, Linux (Ubuntu), and sometimes Android</li>
+                <li>A book and music journal</li>
+                <li>Links to online resources</li>
+                <li>Supporting information for presentations and posters</li>
+                <li>Please excuse the commit history, this is a work in progress</li>
+            </ul>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
             <br/>Recommendations of media and resources are made independent of any ideologies/beliefs those involved in the production may hold
             <br/>Contact:
-            <a href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
+            <a class="footer" href="mailto:corey.ratcliffe@liverpool.ac.uk">corey.ratcliffe@liverpool.ac.uk</a></p>
         </footer>
     </div>
 </body>
