--- a/software.html
+++ b/software.html
@@ -18,38 +18,37 @@
         	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
         	<ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
-                <li>Audacity - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
+                <li><a href="https://www.audacityteam.org/">Audacity</a> - Multi-track audio editing, relatively powerful for its learning curve [Linux, Mac, Windows]</li>
                 <ul>
                     <li>Requires manual installation of the third-party LAME encoder to export to mp3 on Linux</li>
                 </ul>
-                <li>Brave Browser - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
-                <li>Calibre - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
-                <li>Deluge - Fast and safe torrent client [Linux, Mac, Windows]</li>
-                <li>Equalizer APO - Audio processing software, functions as a systemwide EQ [Windows]</li>
-                <li>Peace Equalizer - Highly recommended interface for Equalizer APO
-                <li>Evince PDF reader - Lightweight, but powerful, document viewer [Linux]</li>
-                <li>Foxit Reader - Powerful and free document viewer [Linux, Mac, Windows]</li>
+                <li><a href="https://brave.com">Brave Browser</a> - Chrome-based browser with a built-in adblocker and TOR browser [Linux, Mac, Windows]</li>
+                <li><a href="https://calibre-ebook.com">Calibre</a> - E-Book library manager, exporter, and reader [Linux, Mac, Windows]</li>
+                <li><a href="https://picotorrent.org/">Picotorrent</a> - Fast, safe, and minimal torrent client [Windows]</li>
+                <li><a href="https://equalizerapo.com/">Equalizer APO</a> - Open source audio processing software, functions as a systemwide EQ [Windows]</li>
+                <li><a href="https://equalizerapo.com/">Equalizer APO</a>Peace Equalizer - Highly recommended interface for Equalizer APO
+                <li><a href="https://evince.en.softonic.com/">Evince PDF Reader</a> - Lightweight, but powerful, document viewer [Linux]</li>
+                <li><a href="https://www.foxit.com/pdf-reader/">Foxit Reader</a> - Powerful and free document viewer [Linux, Mac, Windows]</li>
                 <ul>
                     <li>Lacks some features on Linux</li>
                     <li>Advertisements can easily be disabled in the preferences</li>
                 </ul>
-                <li>GIMP - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
-                <li>Inkscape - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
-                <li>Krita - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
-                <li>Musicbee - Highly customisable music library manager, exporter, and player [Windows]</li>
+                <li><a href="https://www.gimp.org/">GIMP</a> - Vector based image manipulation software, a Photoshop alternative [Linux, Mac, Windows]</li>
+                <li><a href="https://inkscape.org/">Inkscape</a> - Vector based graphics editor, an Illustrator alternative [Linux, Mac, Windows]</li>
+                <li><a href="https://krita.org/en/">Krita</a> - Feature-heavy painting and drawing program [Linux, Mac, Windows]</li>
+                <li><a href="https://www.getmusicbee.com/">Musicbee</a> - Highly customisable music library manager, exporter, and player [Windows]</li>
                 <ul>
-                    <li>AudioBand - A proxy audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
+                    <li><a href="https://github.com/dsafa/audio-band">Audioband</a> - A taskbar-based audio controller for Spotify, iTunes, or MusicBee [Windows]</li>
                 </ul>
-                <li>Notepad++ - A simple text editor, with comprehensive and easy to use preferences [Windows]</li>
-                <li>Openshot - Powerful video editing software [Linux, Mac, Windows]</li>
-                <li>Scribus - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
-                <li>TiddlyWiki - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
+                <li><a href="https://www.openshot.org/">OpenShot</a> - Powerful video editing software [Linux, Mac, Windows]</li>
+                <li><a href="https://www.scribus.net/">Scribus</a> - Desktop publishing software, an InDesign alternative [Linux, Mac, Windows]</li>
+                <li><a href="">Tiddlywiki</a> - A html based personal wikipedia tool, incredibly lightweight, and unsurpassed as a diary</li>
                 <ul>
-                    <li>TiddlyDesktop - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
-                    <li>AndTidWiki - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
+                    <li><a href="https://tiddlywiki.com/">TiddlyDesktop</a> - A fusion web-browser/Javascript node built in NWJS, allowing Tiddlywiki to run as a native app [Linux, Mac, Windows]</li>
+                    <li><a href="https://andtidwiki.en.aptoide.com/app">AndTidWiki</a> - A standalone html viewing tool, optimised for TiddlyWiki [Android]</li>
                 </ul>
-                <li>VLC - Powerful multimedia player [Linux, Mac, Windows]</li>
-                <li>Zotero - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
+                <li><a href="https://www.videolan.org/">VLC</a> - Powerful multimedia player [Linux, Mac, Windows]</li>
+                <li><a href="https://www.zotero.org/">Zotero</a> - Reference and journal library manager, capable of sharing libraries between devices [Linux, Mac, Windows]</li>
             </ul>
         </div>
         <footer id="footer">
