--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <html>
 <body>
     <div id="page-container">
+        <div id="navigation">
+            <ul class="list">
+                <li><a href="https://c-ratcliffe.github.io">Home</a></li>
+                <li><a href="https://c-ratcliffe.github.io/software">Software</a></li>
+                <li><a href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
+            </ul>
+        </div>
         <div id="hero_image">
         	<div id="hero_text">
         		<h1>CR's Public Repository</h1>
