--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         		<h2>Notes, links, information, and resources you might find useful</h2>
             </div>
         </div>
-        <div id="content-wrap">
+        <div id="page_content">
         	<h3>Included on this site is:</h3>
         	<ul>
                 <li>An overview and introduction the work I have done since starting my PhD in neuroimaging, which has focused on imaging neural networks in Epilepsy and Neurocysticercosis</li>
