--- a/software.html
+++ b/software.html
@@ -14,7 +14,7 @@
         		<h2>Software that I have personally found useful</h2>
             </div>
         </div>
-        <div id="content-wrap">
+        <div id="page_content">
         	<h3>Efforts have been made to limit software to free and open-source options. Some paid for options are included when no better alternative exists (to my knowledge). Subscription models are excluded entirely.</h3>
         	<ul>
                 <li><a href="https://atom.io">Atom Editor</a> - Highly modifiable text editor with full GitHub integration [Linux, Mac, Windows]</li>
