--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <div id="page-container">
         <div id="navigation">
-            <ul class="list">
-                <li><a href="https://c-ratcliffe.github.io">Home</a></li>
-                <li><a href="https://c-ratcliffe.github.io/software">Software</a></li>
-                <li><a href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
+            <ul class="nav">
+                <li><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
+                <li><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
+                <li><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
             </ul>
         </div>
         <div id="hero_image">
