--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 <html>
 <body>
     <div id="page-container">
-        <ul class="nav">
-            <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
-            <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
-            <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
-        </ul>
+        <div id="nav">
+            <ul class="nav">
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
+            </ul>
+        </div>
         <div id="hero_image">
         	<div id="hero_text">
         		<h1>CR's Public Repository</h1>
