--- a/software.html
+++ b/software.html
@@ -7,6 +7,11 @@
 <body>
     <div id="page-container">
         <div id="hero_image">
+            <ul class="nav">
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io">Home</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/abstracts">Abstracts</a></li>
+                <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
+            </ul>
         	<div id="hero_text">
         		<h1>CR's Software Recommendations</h1>
         	</div>
