--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>CR's Public Repository</h1>
+        		<h1>Corey Ratcliffe: Neuroscientist to Neuroscientist</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Notes, links, information, and resources you might find useful</h2>
+        		<h2>A combination blog, portfolio, and resource</h2>
             </div>
         </div>
         <div id="page_content">
