--- a/software.html
+++ b/software.html
@@ -13,10 +13,10 @@
                 <li class="nav"><a class = "nav" href="https://c-ratcliffe.github.io/software">Software</a></li>
             </ul>
         	<div id="hero_text">
-        		<h1>CR's Software Recommendations</h1>
+        		<h1>Software Recommendations</h1>
         	</div>
         	<div id="hero_subtext">
-        		<h2>Software that I have personally found useful</h2>
+        		<h2>Programmes, tools, and packages for myriad applications</h2>
             </div>
         </div>
         <div id="page_content">
