--- a/abstracts.html
+++ b/abstracts.html
@@ -20,8 +20,13 @@
             </div>
         </div>
         <div id="page_content">
+            <h3>First author:</h3>
         	<ul>
                 <li><a href="https://c-ratcliffe.github.io/21_subcortical_shape">2021 - Subcortical Shape Analysis in Patients with Neurocysticercosis Presenting with Seizures</a></li>
+            </ul>
+            <h3>Contributing author:</h3>
+        	<ul>
+                <li><a href=""></a></li>
             </ul>
         </div>
         <footer id="footer">
