--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -29,7 +29,7 @@
             <h3>Results</h3>
         	<p class="bodytext">Patients with NCC and recurrent seizures showed significant (corrected p < .05) inward surface deflation in localised regions of the right hippocampus compared to seizure-free NCC patients, when age and sex were modelled as nuisance regressors (Fig. 1). There was no significant or trend level differences in regional shape of the remaining structures between patients presenting with or without seizures.
             </p>
-            <img src="https://c-ratcliffe.github.io/img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
+            <img class="figure" src="https://c-ratcliffe.github.io/img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
