--- a/21_subcortical_shape.html
+++ b/21_subcortical_shape.html
@@ -30,8 +30,15 @@
         	<p class="bodytext">Patients with NCC and recurrent seizures showed significant (corrected p < .05) inward surface deflation in localised regions of the right hippocampus compared to seizure-free NCC patients, when age and sex were modelled as nuisance regressors (Fig. 1). There was no significant or trend level differences in regional shape of the remaining structures between patients presenting with or without seizures.
             </p>
             <img class="figure" src="https://c-ratcliffe.github.io/img/21_subcortical_shape_fig1.png" alt="Figure 1. Surface shape analysis results, showing significant inwards deflation of the right hippocampus in the seizure-recurrent group.">
-            <p class="footertext" style="display:inline;font-weight:400;">Figure 1.</p> <p class="footertext">Significant inwards deflation of the right hippocampus in seizure-recurrent NCC patients, compared to seizure-free NCC patients. Areas in red represent vertices significantly deflated in the seizure-recurrent group, after multiple-comparisons correction. 
+            <p class="footertext" style="display:inline;font-weight:400;">Figure 1.</p> <p class="footertext" style="display:inline;">Significant inwards deflation of the right hippocampus in seizure-recurrent NCC patients, compared to seizure-free NCC patients. Areas in red represent vertices significantly deflated in the seizure-recurrent group, after multiple-comparisons correction. 
             </p>
+            <h3>Conclusions</h3>
+        	<p class="bodytext">Patients with NCC who present with seizures show evidence of localised hippocampal atrophy compared to patients who present with no seizures. This is in line with recent studies that describe global hippocampal volume reduction in patients with NCC and seizures.  Taken together, this may suggest that patients who develop seizures after NCC infection may be predisposed to the development of epileptic seizures in light of precipitating hippocampal abnormalities. Future research should aim to quantify the extent to which, alongside other factors such as perilesional oedema, sub-cortical shape contributes to the multi-factorial aetiology of NCC-based seizures.
+            </p>
+            <h3>References</h3>
+        	<ol>
+                <li></li>
+            </ol>
         </div>
         <footer id="footer">
             <p class="footertext">All opinions presented are solely my own
